--- a/app/src/main/res/layout/activity_home_act.xml
+++ b/app/src/main/res/layout/activity_home_act.xml
@@ -39,6 +39,7 @@
         android:layout_marginLeft="9dp"
         android:layout_marginBottom="28dp"
         android:background="@android:color/transparent"
+        android:onClick="Seguridad"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageButton2"
         app:layout_constraintStart_toStartOf="parent"
@@ -111,6 +112,7 @@
         android:layout_marginStart="84dp"
         android:layout_marginLeft="84dp"
         android:layout_marginBottom="32dp"
+        android:onClick="Seguridad"
         android:text="Security"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
